--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<h1> {{ title }} </h1>
-<hr>
+<!-- <h1> {{ title }} </h1>
+<hr> -->
 <!--
 <hr>
 <h3>Creando un componente fuera...</h3>
 <app-counter></app-counter>
 <hr> -->
 <!-- <h5>Hero - Heroes Component</h5> -->
-<app-hero-heroes></app-hero-heroes>
-<app-heroes-list></app-heroes-list>
+<!-- <app-hero-heroes></app-hero-heroes>
+<app-heroes-list></app-heroes-list> -->
+
+<app-dbz-main-page></app-dbz-main-page>
 
